--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TaskManager": "Data Source=localhost,60208;Database=TaskManager;User id=saavery;Password=1234!Secret;TrustServerCertificate=True;"
+  }
 }
