made projects and users many to many in entity framework

--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManager": "Data Source=localhost,60208;Database=TaskManager;User id=saavery;Password=1234!Secret;TrustServerCertificate=True;"
+    "TaskManagerProjectUser": "Data Source=localhost,60208;Database=TaskManagerProjectUser;User id=saavery;Password=1234!Secret;TrustServerCertificate=True;"
   }
 }
